[gd_scene load_steps=12 format=3 uid="uid://c6lnn2fvrbaw2"]

[ext_resource type="Script" path="res://main.gd" id="1_0r6n5"]
[ext_resource type="PackedScene" uid="uid://b4wpmqp05t6cu" path="res://player.tscn" id="3_veqnc"]
[ext_resource type="PackedScene" uid="uid://ccqoreueuxdb7" path="res://hud.tscn" id="4_0qnje"]
[ext_resource type="AudioStream" uid="uid://b5ig8lm3ddisj" path="res://sfx/BGM.wav" id="5_c7a4f"]
[ext_resource type="AudioStream" uid="uid://dw26fpygeag8o" path="res://art/gameover.wav" id="6_hp1r0"]
[ext_resource type="PackedScene" uid="uid://b8l6bver4vk0" path="res://falling_boba.tscn" id="7_groxk"]
[ext_resource type="PackedScene" path="res://ice_bomb.tscn" id="8_dwa6l"]
[ext_resource type="PackedScene" uid="uid://c4ubeglymqyfk" path="res://OutroCutscene/OutroScene1.tscn" id="9_47eks"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_06hiq"]
load_path = "res://.godot/imported/enemyFlyingAlt_1.png-559f599b16c69b112c1b53f6332e9489.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_watex"]
load_path = "res://.godot/imported/enemyFlyingAlt_2.png-31dc7310eda6e1b721224f3cd932c076.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_eou14"]
load_path = "res://.godot/imported/enemySwimming_1.png-dd0e11759dc3d624c8a704f6e98a3d80.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_q6a0o"]
load_path = "res://.godot/imported/enemySwimming_2.png-4c0cbc0732264c4ea3290340bd4a0a62.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ew6lk"]
load_path = "res://.godot/imported/enemyWalking_1.png-5af6eedbe61b701677d490ffdc1e6471.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_civ28"]
load_path = "res://.godot/imported/enemyWalking_2.png-67c480ed60c35e95f5acb0436246b935.ctex"

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_06hiq")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_watex")
}],
"loop": true,
"name": &"fly",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_eou14")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_q6a0o")
}],
"loop": true,
"name": &"swim",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_ew6lk")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_civ28")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="2"]
radius = 37.0
height = 100.0

[sub_resource type="PackedScene" id="PackedScene_acyv5"]
_bundled = {
"conn_count": 1,
"conns": PackedInt32Array(3, 0, 14, 13, 2, 0, 0),
"editable_instances": [],
"names": PackedStringArray("Mob", "collision_mask", "gravity_scale", "mobs", "RigidBody2D", "AnimatedSprite2D", "scale", "sprite_frames", "animation", "CollisionShape2D", "rotation", "shape", "VisibleOnScreenNotifier2D", "_on_VisibilityNotifier2D_screen_exited", "screen_exited"),
"node_count": 4,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 4, 0, -1, 2, 1, 0, 2, 1, 1, 3, 0, 0, 5, 5, -1, 3, 6, 2, 7, 3, 8, 4, 0, 0, 0, 9, 9, -1, 2, 10, 5, 11, 6, 0, 0, 0, 12, 12, -1, 0, 0),
"variants": [0, 0.0, Vector2(0.75, 0.75), SubResource("1"), &"walk", 1.5708, SubResource("2")],
"version": 3
}

[sub_resource type="Curve2D" id="Curve2D_edyne"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_f16fa"]

[node name="Main" type="Node"]
script = ExtResource("1_0r6n5")
mob_scene = SubResource("PackedScene_acyv5")

[node name="HUD" parent="." instance=ExtResource("4_0qnje")]

[node name="Player" parent="." instance=ExtResource("3_veqnc")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_edyne")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_c7a4f")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_hp1r0")

[node name="floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2(243, 723)
scale = Vector2(3.06, 3.06)
shape = SubResource("WorldBoundaryShape2D_f16fa")

[node name="fallingBoba" parent="." instance=ExtResource("7_groxk")]
visible = false
z_index = -1
position = Vector2(-255, 564)

[node name="IceBomb" parent="." instance=ExtResource("8_dwa6l")]
visible = false

[node name="OutroScene1" parent="." instance=ExtResource("9_47eks")]

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
